# handoff

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
packaging/: README.md  handoff.rb
src/handoff/: __init__.py  __main__.py  canonical.py  cli.py  config.py  redact.py
src/handoff/agents/: __init__.py  base.py  claude.py  codex.py  opencode.py
src/handoff/formatters/: __init__.py  json_fmt.py  markdown.py
tests/: conftest.py  test_canonical.py  test_claude_adapter.py  test_cli.py  test_codex_adapter.py  test_config.py  test_opencode_adapter.py  test_plugins.py  test_redact.py  test_roundtrip.py  test_security.py
