[project]
name = "handoff-agent"
version = "0.1.1"
description = "Seamlessly switch between AI coding agents without losing context."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Jackson Clark", email = "jclark58@illinois.edu" },
]
keywords = ["ai", "agents", "claude", "codex", "cli", "llm", "handoff"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/HacksonClark/handoff"
Repository = "https://github.com/HacksonClark/handoff"
Issues = "https://github.com/HacksonClark/handoff/issues"

[project.scripts]
handoff = "handoff.cli:main"

# Built-in adapters are also exposed via the same entry-point mechanism used
# by third-party plugins. They still auto-load at import time, but publishing
# them as entry points makes the plugin contract self-documenting.
[project.entry-points."handoff.agents"]
claude = "handoff.agents.claude:register"
codex = "handoff.agents.codex:register"
opencode = "handoff.agents.opencode:register"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/handoff"]

[tool.hatch.build.targets.sdist]
include = [
    "src/handoff",
    "tests",
    "README.md",
    "LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
